refactor(test): 适配 JDK 8 兼容性并优化测试代码
- 替换 String.lines() 方法调用为兼容 JDK 8 的 splitLines 实现
- 修改文件读写方式从 Files.writeString/readString 改为 getBytes/readAllBytes
- 替换 result.isBlank() 检查为 result.trim().isEmpty() 以兼容 JDK 8
- 在 MarkdownRenderer 中使用 Collections.emptyList() 替代 List.of()
- 添加 SheetRowsNormalizer 类用于规范化工作表行数据
- 更新 pom.xml 配置将 Java 版本从 17 降至 1.8
- 修改项目名称和 artifactId 为 excel-to-markdown-jdk8