@@ -36,6 +36,6 @@ class SheetRowsNormalizer {
     }
 
     private boolean isBlank(String value) {
-        return value == null || value.isBlank();
+        return value == null || value.trim().isEmpty();
     }
 }
